--- a/Web4/BlendedAPI/Styles/exercise.less
+++ b/Web4/BlendedAPI/Styles/exercise.less
@@ -13,7 +13,7 @@
     height: auto; //prepsany styl difotniho top baru
     .btn-finish {
       margin-left: 5px;
-      margin-right: 5px;
+      margin-right: 15px;
       margin-top: 6px;
       background-color: @panel-default-heading-bg;
     }
@@ -114,7 +114,7 @@
 
     .more-body-exercise {
       //color: @alert-success-text;
-      //padding-top: 10px;
+      padding-bottom: 10px;
       h1 {
         font-size: 16px;
         font-weight: bold;
