--- a/Web4/BlendedAPI/Styles/other.less
+++ b/Web4/BlendedAPI/Styles/other.less
@@ -23,7 +23,7 @@
   }
 
   .panel-heading {
-    h3 {
+    h3, h4 {
       margin: 10px 0;
     }
   }
@@ -89,38 +89,6 @@
     }
   }
 
-  .study-plan {
-    > li {
-      position: relative;
-      padding-left: 50px;
-      padding-right: 120px;
-
-      h4 {
-        margin-top: 0px;
-      }
-
-      .left-mark, .right-mark {
-        position: absolute;
-        top: 5px;
-      }
-
-      .left-mark {
-        left: 10px;
-        top: 8px;
-        font-size: 24px;
-        /*border: solid 1px lightgray;
-        border-radius: 15px;*/
-        width: 38px;
-        text-align: center;
-      }
-
-      .right-mark {
-        width: 110px;
-        right: 0px;
-      }
-    }
-  }
-
   .score-bar {
     display: inline-block;
     position: relative;
@@ -163,17 +131,5 @@
     }
   }
 
-  .home-course {
-    .panel-heading {
-      position: relative;
-
-      .more {
-        position:absolute;
-        cursor:pointer;
-        top: 24px;
-        right: 18px;
-        font-size: 24px;
-      }
-    }
-  }
+  
 }
