--- a/Web4/BlendedAPI/vyzva/Views/toolbar/Run.html
+++ b/Web4/BlendedAPI/vyzva/Views/toolbar/Run.html
@@ -1,1 +1,1 @@
-﻿<button class="btn btn-success btn-lg" data-ng-click="::ts.tbClick()">{{::ts.tbTitle}} <i class="fa fa-hand-o-right"></i></button>
+﻿<!--<button class="btn btn-success btn-lg" data-ng-click="::ts.tbClick()">{{::ts.tbTitle}} <i class="fa fa-hand-o-right"></i></button>-->
