--- a/Web4/BlendedAPI/Styles/exercise.css
+++ b/Web4/BlendedAPI/Styles/exercise.css
@@ -3,7 +3,7 @@
 }
 .bl .topbar-exercise .btn-finish {
   margin-left: 5px;
-  margin-right: 5px;
+  margin-right: 15px;
   margin-top: 6px;
   background-color: #f5f5f5;
 }
@@ -87,6 +87,9 @@
   top: 1px;
   right: 10px;
   font-size: 20px;
+}
+.bl .instruction .more-body-exercise {
+  padding-bottom: 10px;
 }
 .bl .instruction .more-body-exercise h1 {
   font-size: 16px;
