funkcni panel collapse

--- a/Web4/BlendedAPI/Styles/other.less
+++ b/Web4/BlendedAPI/Styles/other.less
@@ -131,5 +131,17 @@
     }
   }
 
+  .close-panel {
+    position:absolute;
+    right:10px;
+    top:10px;
+    font-size:24px;
+    color:lightgray;
+    cursor:pointer;
+  }
+
+  .position-relative {
+    position:relative;
+  }
   
 }
