--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -1,16 +1,17 @@
 ﻿<!--***************** LAYOUT -->
-<div class="topbar topbar-exercise" ng-controller="collapsable">
+<div class="topbar topbar-exercise" ng-controller="collapsable as modulecollapsable">
   <div class="container-fluid">
     <div class="container">
       <div class="pull-left" ng-include="'vyzva$common$topbarinnerleft.html'"></div>
       <button class="pull-left btn btn-success btn-lg" ng-if="::!modService.moduleDone" ng-click="::ts.tbClick()">{{::ts.tbTitle}} <i class="fa fa-hand-o-right"></i></button>
       <button class="btn-finish pull-left btn btn-default" ng-click="::ts.tbBackClick()">Zpět <i class="fa fa-level-up"></i></button>
-      <div class="pull-right more fa fa-bars" ng-click="isCollapsed = !isCollapsed"></div>
+      <div class="pull-right more fa fa-bars" ng-click="modulecollapsable.isCollapsed = !modulecollapsable.isCollapsed"></div>
       <div class="pull-right" ng-include="'vyzva$common$topbarinnerright.html'"></div>
       <div class="ex-items" ng-include="'vyzva$exercise$moduleheader.html'"></div>
     </div>
   </div>
   <div class="container-fluid" style="background-color:white;" ng-include="'vyzva$exercise$modulemore.html'"></div>
+  <!--<div class="container-fluid" style="background-color:white;" noscopeinclude nginclude="'vyzva$exercise$modulemore.html'"></div>-->
 </div>
 <div class="container lm-top-margin-lg">
   <div class="instruction" ng-include="'vyzva$exercise$instruction.html'"></div>
@@ -31,7 +32,9 @@
 </script>
 
 <script type="text/ng-template" id="vyzva$exercise$modulemore.html">
-  <div collapse="isCollapsed" class="container more-body-module">
+  <!--<h1>{{ascollapsable.isCollapsed}}</h1>-->
+  <div collapse="modulecollapsable.isCollapsed" class="container more-body-module position-relative">
+    <div class="close-panel fa fa-times" ng-click="modulecollapsable.isCollapsed = !modulecollapsable.isCollapsed"></div>
     <h4>{{::modService.node.title}}, podrobné informace:</h4>
     <div class="row">
       <div class="col-sm-3">
@@ -53,13 +56,14 @@
 </script>
 
 <script type="text/ng-template" id="vyzva$exercise$instruction.html">
-  <div ng-controller="collapsable" ng-if="exService.doneStatus">
-    <div class="header h4" ng-click="isCollapsed = !isCollapsed">
+  <div ng-controller="collapsable as excollapsed" ng-if="exService.doneStatus">
+    <div class="header h4" ng-click="excollapsed.isCollapsed = !excollapsed.isCollapsed">
       <div class="more fa fa-bars"></div>
       <span class="fa fa-check"></span>
       Splněno<span ng-if="exService.score>=0">, skore: <span vyzva$exmodule$scoreprogress value="{{exService.score}}"></span></span>
     </div>
-    <div collapse="isCollapsed" class="more-body-exercise">
+    <div collapse="excollapsed.isCollapsed" class="more-body-exercise position-relative">
+      <div class="close-panel fa fa-times" ng-click="excollapsed.isCollapsed = !excollapsed.isCollapsed"></div>
       <hr />
       <h4>{{::ts.title}}, podrobné informace:</h4>
       <div class="row">
@@ -73,13 +77,14 @@
       </div>
     </div>
   </div>
-  <div ng-controller="collapsable" ng-if="!exService.doneStatus">
-    <div ng-click="isCollapsed = !isCollapsed" class="header h4">
+  <div ng-controller="collapsable as excollapsed" ng-if="!exService.doneStatus">
+    <div ng-click="excollapsed.isCollapsed = !excollapsed.isCollapsed" class="header h4">
       <span class="fa fa-info-circle"></span>
       {{::exService.instructionData.title}}
       <div class="more fa fa-bars"></div>
     </div>
-    <div collapse="isCollapsed" class="more-body-exercise">
+    <div collapse="excollapsed.isCollapsed" class="more-body-exercise position-relative">
+      <div class="close-panel fa fa-times" ng-click="excollapsed.isCollapsed = !excollapsed.isCollapsed"></div>
       <hr />
       <div ng-bind-html="::exService.instructionData.body | rawhtml"></div>
     </div>
