--- a/Web4/BlendedAPI/Styles/other.css
+++ b/Web4/BlendedAPI/Styles/other.css
@@ -98,3 +98,14 @@ a.bl .wizzard .wizzard-item.active:hover {
   margin-top: 0px;
   padding: 16px;
 }
+.bl .close-panel {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 24px;
+  color: lightgray;
+  cursor: pointer;
+}
+.bl .position-relative {
+  position: relative;
+}
