--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -4,9 +4,13 @@
     <div class="container">
       <div class="pull-left" ng-include="'vyzva$common$topbarinnerleft.html'"></div>
       <button class="pull-left btn btn-success btn-lg" ng-if="::!modService.moduleDone" ng-click="::ts.tbClick()">{{::ts.tbTitle}} <i class="fa fa-hand-o-right"></i></button>
-      <button class="btn-finish pull-left btn btn-default" ng-click="::ts.tbBackClick()">Zpět <i class="fa fa-level-up"></i></button>
+      <button class="btn-finish pull-left btn btn-default" ng-click="::ts.tbBackClick()">Zpět na kurz <i class="fa fa-level-up"></i></button>
+      <div class="pull-left topbar-title" ng-if="::!state.pageTitlePlace">{{::modService.node.title}}</div>
       <div class="pull-right more fa fa-bars" ng-click="modulecollapsable.isCollapsed = !modulecollapsable.isCollapsed"></div>
       <div class="pull-right" ng-include="'vyzva$common$topbarinnerright.html'"></div>
+      <div class="clearfix"></div>
+      <span style="color:white">Cvičení testu:</span>
+      <div class="clearfix"></div>
       <div class="ex-items" ng-include="'vyzva$exercise$moduleheader.html'"></div>
     </div>
   </div>
@@ -20,6 +24,7 @@
 
 <!--***************** INCLUDES -->
 <script type="text/ng-template" id="vyzva$exercise$moduleheader.html">
+  <!--<span style="color:white;">Obsah testu: </span>-->
   <div ng-if="::modService.exShowPanel" ng-repeat="it in ::modService.exercises" class="ex-item"
        ng-class="{warning:it.background==1, success: it.background==2, 'no-clickable': modService.exNoclickable}"
        ng-click="modService.exNoclickable ? null : modService.navigateExercise(it.idx)">
@@ -60,7 +65,7 @@
     <div class="header h4" ng-click="excollapsed.isCollapsed = !excollapsed.isCollapsed">
       <div class="more fa fa-bars"></div>
       <span class="fa fa-check"></span>
-      Splněno<span ng-if="exService.score>=0">, skore: <span vyzva$exmodule$scoreprogress value="{{exService.score}}"></span></span>
+      Cvičení splněno<span ng-if="exService.score>=0">, skore: <span vyzva$exmodule$scoreprogress value="{{exService.score}}"></span></span>
     </div>
     <div collapse="excollapsed.isCollapsed" class="more-body-exercise position-relative">
       <div class="close-panel fa fa-times" ng-click="excollapsed.isCollapsed = !excollapsed.isCollapsed"></div>
@@ -79,9 +84,9 @@
   </div>
   <div ng-controller="collapsable as excollapsed" ng-if="!exService.doneStatus">
     <div ng-click="excollapsed.isCollapsed = !excollapsed.isCollapsed" class="header h4">
-      <span class="fa fa-info-circle"></span>
+      <!--<span class="fa fa-question-circle"></span>-->
       {{::exService.instructionData.title}}
-      <div class="more fa fa-bars"></div>
+      <div class="more fa fa-question-circle"></div>
     </div>
     <div collapse="excollapsed.isCollapsed" class="more-body-exercise position-relative">
       <div class="close-panel fa fa-times" ng-click="excollapsed.isCollapsed = !excollapsed.isCollapsed"></div>
