--- a/Web4/BlendedAPI/Styles/exercise.less
+++ b/Web4/BlendedAPI/Styles/exercise.less
@@ -11,6 +11,7 @@
 
   .topbar-exercise {
     height: auto; //prepsany styl difotniho top baru
+    //padding-bottom:2px;
     .btn-finish {
       margin-left: 5px;
       margin-right: 15px;
@@ -41,7 +42,8 @@
       width: 36px;
       height: 36px;
       font-size: 12px;
-      border: solid 1px @panel-default-border;
+      border: solid 1px black; //@panel-default-border;
+
       background-color: @panel-default-heading-bg;
       cursor: pointer;
       line-height: 36px;
@@ -49,13 +51,13 @@
 
       &.success {
         background-color: @btn-success-bg;
-        border-color: @btn-success-border;
+        //border-color: @btn-success-border;
         color: white;
       }
 
       &.warning {
         background-color: @btn-warning-bg;
-        border-color: @btn-warning-border;
+        //border-color: @btn-warning-border;
         color: white;
       }
 
