--- a/Web4/BlendedAPI/Styles/style.css
+++ b/Web4/BlendedAPI/Styles/style.css
@@ -127,7 +127,7 @@ a.bl .wizzard .wizzard-item.active:hover {
   margin-left: 10px;
   color: lightgray;
   font-size: 24px;
-  margin-top: 8px;
+  margin-top: 6px;
 }
 .bl .topbar .onbehav-go-back {
   margin-right: 10px;
@@ -286,7 +286,7 @@ fieldset[disabled] .bl .btn-succes-info.active {
   width: 36px;
   height: 36px;
   font-size: 12px;
-  border: solid 1px #dddddd;
+  border: solid 1px black;
   background-color: #f5f5f5;
   cursor: pointer;
   line-height: 36px;
@@ -294,12 +294,10 @@ fieldset[disabled] .bl .btn-succes-info.active {
 }
 .bl .topbar-exercise .ex-item.success {
   background-color: #5cb85c;
-  border-color: #4cae4c;
   color: white;
 }
 .bl .topbar-exercise .ex-item.warning {
   background-color: #f0ad4e;
-  border-color: #eea236;
   color: white;
 }
 .bl .topbar-exercise .ex-item .progress-red {
