--- a/Web4/BlendedAPI/Styles/exercise.css
+++ b/Web4/BlendedAPI/Styles/exercise.css
@@ -1,14 +1,18 @@
 .bl .topbar-exercise {
   height: auto;
+  padding-top: 2px;
+}
+.bl .topbar-exercise .module-finished {
+  margin-right: 10px;
+  color: lightgray;
+  font-size: 24px;
+  margin-top: 6px;
 }
 .bl .topbar-exercise .btn-finish {
   margin-left: 5px;
   margin-right: 15px;
   margin-top: 6px;
   background-color: #f5f5f5;
-}
-.bl .topbar-exercise .ex-items {
-  margin-top: 5px;
 }
 .bl .topbar-exercise .lm-logo-black-small {
   margin-top: 8px;
@@ -21,29 +25,43 @@
   margin-right: 12px;
   cursor: pointer;
 }
+.bl .topbar-exercise .ex-items {
+  margin-top: 5px;
+}
 .bl .topbar-exercise .ex-item {
   display: inline-block;
   position: relative;
-  width: 36px;
-  height: 36px;
+  width: 38px;
+  height: 32px;
   font-size: 12px;
-  border: solid 1px black;
-  background-color: #f5f5f5;
+  border: solid 0 black;
+  border-width: 0 2px 4px 2px;
+  /*border-top-width: 0px;
+      border-bottom-width: 4px;
+      border-left-width:1px;
+      border-right-width:1px;*/
+  background-color: #c2c2c2;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
   cursor: pointer;
-  line-height: 36px;
+  line-height: 34px;
   text-align: center;
+}
+.bl .topbar-exercise .ex-item.active {
+  border-bottom-width: 0;
 }
 .bl .topbar-exercise .ex-item.success {
   background-color: #5cb85c;
   color: white;
 }
 .bl .topbar-exercise .ex-item.warning {
-  background-color: #f0ad4e;
-  color: white;
+  background-color: white;
 }
 .bl .topbar-exercise .ex-item .progress-red {
   position: absolute;
   background-color: #ff6022;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
   left: 0;
   right: 0;
   top: 0;
