--- a/Web4/BlendedAPI/Styles/exercise.less
+++ b/Web4/BlendedAPI/Styles/exercise.less
@@ -11,16 +11,20 @@
 
   .topbar-exercise {
     height: auto; //prepsany styl difotniho top baru
-    //padding-bottom:2px;
+    padding-top:2px;
+
+    .module-finished {
+      margin-right: 10px;
+      color: lightgray;
+      font-size: @font-size-h3;
+      margin-top: 6px;
+    }
+
     .btn-finish {
       margin-left: 5px;
       margin-right: 15px;
       margin-top: 6px;
       background-color: @panel-default-heading-bg;
-    }
-
-    .ex-items {
-      margin-top: 5px;
     }
 
     .lm-logo-black-small {
@@ -36,18 +40,32 @@
       cursor: pointer;
     }
 
+    .ex-items {
+      margin-top: 5px;
+    }
+
     .ex-item {
       display: inline-block;
       position: relative;
-      width: 36px;
-      height: 36px;
+      width: 38px;
+      height: 32px;
       font-size: 12px;
-      border: solid 1px black; //@panel-default-border;
-
-      background-color: @panel-default-heading-bg;
+      border: solid 0 black; //@panel-default-border;
+      border-width: 0 2px 4px 2px;
+      /*border-top-width: 0px;
+      border-bottom-width: 4px;
+      border-left-width:1px;
+      border-right-width:1px;*/
+      //border-bottom-width: 0;
+      background-color: darken(@panel-default-heading-bg, 20);
+      .border-top-radius(@alert-border-radius);
       cursor: pointer;
-      line-height: 36px;
+      line-height: 34px;
       text-align: center;
+
+      &.active {
+        border-bottom-width: 0;
+      }
 
       &.success {
         background-color: @btn-success-bg;
@@ -56,14 +74,15 @@
       }
 
       &.warning {
-        background-color: @btn-warning-bg;
+        background-color: white;
         //border-color: @btn-warning-border;
-        color: white;
+        //color: white;
       }
 
       .progress-red {
         position: absolute;
         background-color: @oli-red;
+        .border-top-radius(@alert-border-radius);
         left: 0;
         right: 0;
         top: 0;
@@ -117,6 +136,7 @@
     .more-body-exercise {
       //color: @alert-success-text;
       padding-bottom: 10px;
+
       h1 {
         font-size: 16px;
         font-weight: bold;
